# Projet_it

./: .gitignore  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: database.pc  sensors.pc
devel/lib/sensors/: dht11_sensor_node.py
devel/share/database/cmake/: databaseConfig.cmake
devel/share/sensors/cmake/: sensorsConfig.cmake
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/badge_rfid/: CMakeLists.txt  package.xml
src/badge_rfid/src/: ajout_badge.py  delete_badge.py  nav_database_badge.py  test_code_service.py
src/badge_rfid/srv/: ajout_badge.srv  login_member.srv  nav_database.srv  suppr_badge.srv
src/badge_rfid/test/: test_ajout_badge.py  test_del_badge.py  test_integration_ajout_badge.py  test_integration_del_badge.py  test_nav_database_badge.py
src/database/: CMakeLists.txt  package copy.xml  package.xml
src/database/database/: RFID_infos.db  RFID_mesures.db  dht11_humidite.db  dht11_temperature.db  volumeMicro.db
src/database/src/: .database_tempdht11.py.swp  RFID_infos.db  RFID_mesures.db  core  database_RFID.py  database_humdht11.py  database_sonore.py  database_tempdht11.py  dht11_humidite.db  dht11_temperature.db  noeud_dht11.py  volumeMicro.db
src/database/srv/: suppr_donne_capt.srv
src/database/test/: test_database_humd.py  test_database_micro.py  test_database_rfid_info.py  test_database_temp.py
src/main/: CMakeLists.txt  package.xml
src/main/launch/: system_without_sensor.launch
src/sensors/: CMakeLists.txt  package.xml
src/sensors/launch/: badge.launch  dht11.launch  main.launch  micro.launch  test_graphiques.launch  test_lecture_badge.launch  test_service_badge.launch
src/sensors/launch/script_test_node/: dht11.py  rfid.py
src/sensors/src/: CMakeLists.txt  badge_sensor_node.py  dht11_sensor_node.py  micro_sensor_node.py
src/sensors/src/test_node/: test_pub_badge.py  test_pub_dht11.py  test_pub_micro.py
src/sensors/src/test_unit/: test_badge_unit.py  test_node_dht11.py
src/sensors/test/: test_badge.py  test_dht11.py  test_micro.py
src/webinterface/: CMakeLists.txt  package.xml
src/webinterface/src/flask_project/: app.py  auth.py  database_user.py  server.crt  server.key
src/webinterface/src/flask_project/static/: style.css
src/webinterface/src/flask_project/templates/: echec_enregistrement.html  echec_suppression.html  formulaire_badge.html  gestion_utilisateur.html  graph_capteurs.html  graph_capteursbis.html  login.html  page_accueil.html  page_validation.html  placez_badge.html  succes_enregistrement.html  success_suppression.html  traitement.html
src/webinterface/test/: test_flask_node.py  test_integration_flask.py
