<?xml version="1.0"?>
<package format="2">
  <name>sensors</name>
  <version>0.0.1</version>
  <description>The sensors package for reading DHT11 data</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- ROS dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- External dependencies -->
  <exec_depend>Adafruit_DHT</exec_depend>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
</package>
