<?xml version="1.0"?>
<package format="2">
  <name>sensors</name>
  <version>0.0.1</version>
  <description>The sensors package for reading DHT11 data</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>Adafruit_DHT</exec_depend>

  <!-- Export section -->
  <export>
  </export>
</package>
